--- a/index.html
+++ b/index.html
@@ -20,17 +20,35 @@
 			<div class="display-4">Доставка роллов</div>
 			<p class="lead">Оперативно и вкусно</p>
 		</div>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+					<li class="nav-link" data-filter="all">Все товары
+					</li>
+					<li class="nav-item">
+					<li class="nav-link" data-filter="roll">Роллы</li>
+					</li>
+					<li class="nav-item">
+					<li class="nav-link" data-filter="drink">Напитки</li>
+					</li>
+				</ul>
+			</div>
+		</nav>
 	</header>
 
 	<div class="container mb-5">
 		<div class="row">
-
 			<div class="col-md-8">
 				<div class="row" id="products">
 
 					<!-- Ролл -->
 					<div class="col-md-6">
-						<div class="card mb-4" data-id="01">
+						<div class="card mb-4 product product roll" data-id="01">
 							<img class="product-img" src="img/roll/philadelphia.jpg" alt="">
 							<div class="card-body text-center">
 								<h4 class="item-title">Филадельфия хит ролл</h4>
@@ -45,7 +63,8 @@
 
 									<div class="price">
 										<div class="price__weight">180</div>
-										<div class="price__currency">300</div>
+										<div class="price__currency">300 <grn>₴</grn>
+										</div>
 									</div>
 								</div>
 
@@ -56,9 +75,11 @@
 					</div>
 					<!-- // Ролл -->
 
+
+
 					<!-- Ролл -->
 					<div class="col-md-6">
-						<div class="card mb-4" data-id="02">
+						<div class="card mb-4 product roll" data-id="02">
 							<img class="product-img" src="img/roll/california-tempura.jpg" alt="">
 							<div class="card-body text-center">
 								<h4 class="item-title">Калифорния темпура</h4>
@@ -67,13 +88,14 @@
 								<div class="details-wrapper">
 									<div class="items counter-wrapper">
 										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>4</div>
+										<div class="items__current" data-counter>1</div>
 										<div class="items__control" data-action="plus">+</div>
 									</div>
 
 									<div class="price">
 										<div class="price__weight">205г.</div>
-										<div class="price__currency">250</div>
+										<div class="price__currency">250 <grn>₴</grn>
+										</div>
 									</div>
 								</div>
 
@@ -87,7 +109,7 @@
 
 					<!-- Ролл -->
 					<div class="col-md-6">
-						<div class="card mb-4" data-id="03">
+						<div class="card mb-4 product roll" data-id="03">
 							<img class="product-img" src="img/roll/zapech-california.jpg" alt="">
 							<div class="card-body text-center">
 								<h4 class="item-title">Запеченый ролл «Калифорния»</h4>
@@ -96,13 +118,15 @@
 								<div class="details-wrapper">
 									<div class="items counter-wrapper">
 										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>8</div>
+										<div class="items__current" data-counter>1</div>
 										<div class="items__control" data-action="plus">+</div>
 									</div>
 
 									<div class="price">
 										<div class="price__weight">182г.</div>
-										<div class="price__currency">230</div>
+										<div class="price__currency">230 <grn>₴</grn>
+										</div>
+
 									</div>
 
 								</div>
@@ -115,7 +139,7 @@
 					<!-- // Ролл -->
 
 					<!-- Ролл -->
-					<div class="col-md-6">
+					<div class="col-md-6 product roll">
 						<div class="card mb-4" data-id="04">
 							<img class="product-img" src="img/roll/philadelphia.jpg" alt="">
 							<div class="card-body text-center">
@@ -125,13 +149,14 @@
 								<div class="details-wrapper">
 									<div class="items counter-wrapper">
 										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>9</div>
+										<div class="items__current" data-counter>1</div>
 										<div class="items__control" data-action="plus">+</div>
 									</div>
 
 									<div class="price">
 										<div class="price__weight">230г.</div>
-										<div class="price__currency">320</div>
+										<div class="price__currency">320 <grn>₴</grn>
+										</div>
 									</div>
 
 								</div>
@@ -145,10 +170,106 @@
 					</div>
 					<!-- // Ролл -->
 
+					<!-- Напиток -->
+					<div class="col-md-6 product drink">
+						<div class="card mb-4" data-id="05">
+							<img class="product-img" src="img/roll/cocacola.jpg" alt="">
+							<div class="card-body text-center">
+								<h4 class="item-title">Кола-Кола</h4>
+								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
+
+								<div class="details-wrapper">
+									<div class="items counter-wrapper">
+										<div class="items__control" data-action="minus">-</div>
+										<div class="items__current" data-counter>1</div>
+										<div class="items__control" data-action="plus">+</div>
+									</div>
+
+									<div class="price">
+										<div class="price__weight">0,5л.</div>
+										<div class="price__currency">40 <grn>₴</grn>
+										</div>
+									</div>
+
+								</div>
+
+								<button data-cart type="button" class="btn btn-block btn-outline-warning">
+									+ в корзину
+								</button>
+
+							</div>
+						</div>
+					</div>
+					<!-- // Напиток -->
+
+					<!-- Напиток -->
+					<div class="col-md-6">
+						<div class="card mb-4 product drink" data-id="06">
+							<img class="product-img" src="img/roll/fanta.jpg" alt="">
+							<div class="card-body text-center">
+								<h4 class="item-title">Фанта</h4>
+								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
+
+								<div class="details-wrapper">
+									<div class="items counter-wrapper">
+										<div class="items__control" data-action="minus">-</div>
+										<div class="items__current" data-counter>1</div>
+										<div class="items__control" data-action="plus">+</div>
+									</div>
+
+									<div class="price">
+										<div class="price__weight">0,5л</div>
+										<div class="price__currency">40 <grn>₴</grn>
+										</div>
+									</div>
+
+								</div>
+
+								<button data-cart type="button" class="btn btn-block btn-outline-warning">
+									+ в корзину
+								</button>
+
+							</div>
+						</div>
+					</div>
+					<!-- // Напиток -->
+
+					<!-- Напиток -->
+					<div class="col-md-6 product drink">
+						<div class="card mb-4" data-id="07">
+							<img class="product-img" src="img/roll/sprite.jpg" alt="">
+							<div class="card-body text-center">
+								<h4 class="item-title">Спрайт </h4>
+								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
+
+								<div class="details-wrapper">
+									<div class="items counter-wrapper">
+										<div class="items__control" data-action="minus">-</div>
+										<div class="items__current" data-counter>1</div>
+										<div class="items__control" data-action="plus">+</div>
+									</div>
+
+									<div class="price">
+										<div class="price__weight">0,5л</div>
+										<div class="price__currency">40 <grn>₴</grn>
+										</div>
+									</div>
+
+								</div>
+
+								<button data-cart type="button" class="btn btn-block btn-outline-warning">
+									+ в корзину
+								</button>
+
+							</div>
+						</div>
+					</div>
+					<!-- // Напиток -->
 				</div>
 			</div>
-			<div class="col-md-4">
 
+
+			<div class="col-md-4">
 				<!-- Корзина -->
 				<div class="card mb-4">
 					<div class="card-body">
@@ -157,34 +278,7 @@
 							<div class="cart-wrapper">
 
 								<!-- Cart item -->
-								<div class="cart-item" data-id="02">
-									<div class="cart-item__top">
-										<div class="cart-item__img">
-											<img src="img/roll/california-tempura.jpg" alt="">
-										</div>
-										<div class="cart-item__desc">
-											<div class="cart-item__title">Калифорния темпура</div>
-											<div class="cart-item__weight">6 шт. / 205г.</div>
 
-											<!-- cart-item__details -->
-											<div class="cart-item__details">
-
-												<div class="items items--small counter-wrapper">
-													<div class="items__control" data-action="minus">-</div>
-													<div class="items__current" data-counter="">1</div>
-													<div class="items__control" data-action="plus">+</div>
-												</div>
-
-												<div class="price">
-													<div class="price__currency">250</div>
-												</div>
-
-											</div>
-											<!-- // cart-item__details -->
-
-										</div>
-									</div>
-								</div>
 								<!-- // Cart item -->
 
 							</div>
@@ -193,7 +287,10 @@
 							<!-- Стоимость заказа -->
 							<div class="cart-total">
 								<p><span class="h5">Доставка:</span> <span class="delivery-cost free">бесплатно</span> </p>
-								<p><span class="h5">Итого:</span> <span class="total-price">0</span>
+								<p><span class="h5">Итого:</span> <span class="total-price">0 </span>
+									<grn id="₴">₴</grn>
+
+								</p>
 							</div>
 							<!-- // Стоимость заказа -->
 
@@ -223,6 +320,7 @@
 	<script src="js/counter.js"></script>
 	<script src="js/cart.js"></script>
 	<script src="js/calcPrice.js"></script>
+	<script src="js/filter.js"></script>
 	<!-- <script src="js/createProducts.js"></script> -->
 </body>
 
