--- a/index.html
+++ b/index.html
@@ -27,14 +27,10 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
-					<li class="nav-item active">
-					<li class="nav-link" data-filter="all">Все товары
-					</li>
-					<li class="nav-item">
+					<li class="nav-link" data-filter="all">Все товары </li>
 					<li class="nav-link" data-filter="roll">Роллы</li>
-					</li>
-					<li class="nav-item">
 					<li class="nav-link" data-filter="drink">Напитки</li>
+					<li class="nav-link" data-filter="dessert">Десерты</li>
 					</li>
 				</ul>
 			</div>
@@ -173,10 +169,10 @@
 					<!-- Напиток -->
 					<div class="col-md-6 product drink">
 						<div class="card mb-4" data-id="05">
-							<img class="product-img" src="img/roll/cocacola.jpg" alt="">
+							<img class="product-img" src="img/drink/cocacola.jpg" alt="">
 							<div class="card-body text-center">
 								<h4 class="item-title">Кола-Кола</h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
+								<p><small data-items-in-box class="text-muted">1 шт.</small></p>
 
 								<div class="details-wrapper">
 									<div class="items counter-wrapper">
@@ -205,10 +201,10 @@
 					<!-- Напиток -->
 					<div class="col-md-6">
 						<div class="card mb-4 product drink" data-id="06">
-							<img class="product-img" src="img/roll/fanta.jpg" alt="">
+							<img class="product-img" src="img/drink/fanta.jpg" alt="">
 							<div class="card-body text-center">
 								<h4 class="item-title">Фанта</h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
+								<p><small data-items-in-box class="text-muted">1 шт.</small></p>
 
 								<div class="details-wrapper">
 									<div class="items counter-wrapper">
@@ -237,10 +233,10 @@
 					<!-- Напиток -->
 					<div class="col-md-6 product drink">
 						<div class="card mb-4" data-id="07">
-							<img class="product-img" src="img/roll/sprite.jpg" alt="">
+							<img class="product-img" src="img/drink/sprite.jpg" alt="">
 							<div class="card-body text-center">
 								<h4 class="item-title">Спрайт </h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
+								<p><small data-items-in-box class="text-muted">1 шт.</small></p>
 
 								<div class="details-wrapper">
 									<div class="items counter-wrapper">
@@ -264,7 +260,136 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- Напиток -->
+					<div class="col-md-6 product drink">
+						<div class="card mb-4" data-id="07">
+							<img class="product-img" src="img/drink/voda.jpg" alt="">
+							<div class="card-body text-center">
+								<h4 class="item-title">Вода </h4>
+								<p><small data-items-in-box class="text-muted">1 шт.</small></p>
+
+								<div class="details-wrapper">
+									<div class="items counter-wrapper">
+										<div class="items__control" data-action="minus">-</div>
+										<div class="items__current" data-counter>1</div>
+										<div class="items__control" data-action="plus">+</div>
+									</div>
+
+									<div class="price">
+										<div class="price__weight">0,5л</div>
+										<div class="price__currency">30 <grn>₴</grn>
+										</div>
+									</div>
+
+								</div>
+
+								<button data-cart type="button" class="btn btn-block btn-outline-warning">
+									+ в корзину
+								</button>
+
+							</div>
+						</div>
+					</div>
 					<!-- // Напиток -->
+					<!-- ?Десерт -->
+					<div class="col-md-6 product dessert">
+						<div class="card mb-4" data-id="07">
+							<img class="product-img" src="img/sugar/banan.jpg" alt="">
+							<div class="card-body text-center">
+								<h4 class="item-title">Банан в шоколаде
+								</h4>
+								<p><small data-items-in-box class="text-muted">1 шт.</small></p>
+
+								<div class="details-wrapper">
+									<div class="items counter-wrapper">
+										<div class="items__control" data-action="minus">-</div>
+										<div class="items__current" data-counter>1</div>
+										<div class="items__control" data-action="plus">+</div>
+									</div>
+
+									<div class="price">
+										<div class="price__weight">42г.</div>
+										<div class="price__currency">99<grn>₴</grn>
+										</div>
+									</div>
+
+								</div>
+
+								<button data-cart type="button" class="btn btn-block btn-outline-warning">
+									+ в корзину
+								</button>
+
+							</div>
+						</div>
+					</div>
+					<!-- ?/Десерт -->
+
+					<!-- ?Десерт -->
+					<div class="col-md-6 product dessert">
+						<div class="card mb-4" data-id="07">
+							<img class="product-img" src="img/sugar/granatzmedom.jpg" alt="">
+							<div class="card-body text-center">
+								<h4 class="item-title">Гранат с медом
+								</h4>
+								<p><small data-items-in-box class="text-muted">1 шт.</small></p>
+
+								<div class="details-wrapper">
+									<div class="items counter-wrapper">
+										<div class="items__control" data-action="minus">-</div>
+										<div class="items__current" data-counter>1</div>
+										<div class="items__control" data-action="plus">+</div>
+									</div>
+
+									<div class="price">
+										<div class="price__weight">42г.</div>
+										<div class="price__currency">99<grn>₴</grn>
+										</div>
+									</div>
+
+								</div>
+
+								<button data-cart type="button" class="btn btn-block btn-outline-warning">
+									+ в корзину
+								</button>
+
+							</div>
+						</div>
+					</div>
+					<!-- ?/Десерт -->
+
+					<!-- ?Десерт -->
+					<div class="col-md-6 product dessert">
+						<div class="card mb-4" data-id="07">
+							<img class="product-img" src="img/sugar/marakya.jpg" alt="">
+							<div class="card-body text-center">
+								<h4 class="item-title">Маракуйя в шоколаде
+								</h4>
+								<p><small data-items-in-box class="text-muted">1 шт.</small></p>
+
+								<div class="details-wrapper">
+									<div class="items counter-wrapper">
+										<div class="items__control" data-action="minus">-</div>
+										<div class="items__current" data-counter>1</div>
+										<div class="items__control" data-action="plus">+</div>
+									</div>
+
+									<div class="price">
+										<div class="price__weight">42г.</div>
+										<div class="price__currency">99<grn>₴</grn>
+										</div>
+									</div>
+
+								</div>
+
+								<button data-cart type="button" class="btn btn-block btn-outline-warning">
+									+ в корзину
+								</button>
+
+							</div>
+						</div>
+					</div>
+					<!-- ?/Десерт -->
 				</div>
 			</div>
 
@@ -300,8 +425,53 @@
 					<div id="order-form" class="card-body border-top">
 						<h5 class="card-title">Оформить заказ</h4>
 							<form>
+								<div class="form-row">
+									<!-- ?Имя -->
+									<div class="form-group col-md-6">
+										<input type="text" class="form-control" id="inputFirstName" placeholder="Вас зовут..."
+											required>
+									</div>
+									<!-- ?/Имя -->
+
+									<!-- !Фамилия -->
+									<div class="form-group col-md-6">
+										<input type="text" class="form-control" id="inputLastName" placeholder="Ваша фамилия..."
+											required>
+									</div>
+									<!-- !/Фамилия -->
+								</div>
+								<!-- ?Номер -->
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Ваш номер телефона">
+									<input type="tel" class="form-control" id="inputAddress" placeholder="Ваш номер: 0973030670"
+										pattern="[0-9]{3}[0-9]{3}[0-9]{4}" required>
+								</div>
+								<!-- ?/Номер -->
+
+								<!-- !Адресс -->
+								<div class="form-group">
+									<input type="text" class="form-control" id="inputAddress" placeholder="Ваш адресс" required>
+								</div>
+								<!-- !/Адресс -->
+
+								<div class="form-row">
+									<!-- ?Города -->
+									<div class="form-group col-md-6">
+										<select id="inputCity" class="form-control" placeholder="Выберете город">
+											<option>Київ</option>
+											<option>Ірпінь</option>
+											<option>Буча</option>
+											<option>Фастів</option>
+											<option>Біла Церква</option>
+											<option>Вишгород</option>
+											<option>Українка</option>
+											<option>Переяслів</option>
+											<option>Бровари</option>
+											<option>Вишневе</option>
+											<option>Бориспіль</option>
+											<option>Бородянка</option>
+										</select>
+									</div>
+									<!-- ?/Города -->
 								</div>
 								<button type="submit" class="btn btn-primary">Заказать</button>
 							</form>
