--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 					<li class="nav-link" data-filter="roll">Роллы</li>
 					<li class="nav-link" data-filter="drink">Напитки</li>
 					<li class="nav-link" data-filter="dessert">Десерты</li>
+					<p class="nav-link data-sortAsc">Дорогие</p>
+					<p class="nav-link data-sortDesc">Дешевые</p>
 					</li>
 				</ul>
 			</div>
@@ -43,7 +45,7 @@
 				<div class="row" id="products">
 
 					<!-- Ролл -->
-					<div class="col-md-6">
+					<div class="col-md-6" data-price="300">
 						<div class="card mb-4 product product roll" data-id="01">
 							<img class="product-img" src="img/roll/philadelphia.jpg" alt="">
 							<div class="card-body text-center">
@@ -74,7 +76,7 @@
 
 
 					<!-- Ролл -->
-					<div class="col-md-6">
+					<div class="col-md-6" data-price="250">
 						<div class="card mb-4 product roll" data-id="02">
 							<img class="product-img" src="img/roll/california-tempura.jpg" alt="">
 							<div class="card-body text-center">
@@ -104,7 +106,7 @@
 					<!-- // Ролл -->
 
 					<!-- Ролл -->
-					<div class="col-md-6">
+					<div class="col-md-6" data-price="230">
 						<div class="card mb-4 product roll" data-id="03">
 							<img class="product-img" src="img/roll/zapech-california.jpg" alt="">
 							<div class="card-body text-center">
@@ -135,7 +137,7 @@
 					<!-- // Ролл -->
 
 					<!-- Ролл -->
-					<div class="col-md-6 product roll">
+					<div class="col-md-6 product roll" data-price="320">
 						<div class="card mb-4" data-id="04">
 							<img class="product-img" src="img/roll/philadelphia.jpg" alt="">
 							<div class="card-body text-center">
@@ -167,7 +169,7 @@
 					<!-- // Ролл -->
 
 					<!-- Напиток -->
-					<div class="col-md-6 product drink">
+					<div class="col-md-6 product drink" data-price="40">
 						<div class="card mb-4" data-id="05">
 							<img class="product-img" src="img/drink/cocacola.jpg" alt="">
 							<div class="card-body text-center">
@@ -199,7 +201,7 @@
 					<!-- // Напиток -->
 
 					<!-- Напиток -->
-					<div class="col-md-6">
+					<div class="col-md-6" data-price="40">
 						<div class="card mb-4 product drink" data-id="06">
 							<img class="product-img" src="img/drink/fanta.jpg" alt="">
 							<div class="card-body text-center">
@@ -231,7 +233,7 @@
 					<!-- // Напиток -->
 
 					<!-- Напиток -->
-					<div class="col-md-6 product drink">
+					<div class="col-md-6 product drink" data-price="40">
 						<div class="card mb-4" data-id="07">
 							<img class="product-img" src="img/drink/sprite.jpg" alt="">
 							<div class="card-body text-center">
@@ -262,7 +264,7 @@
 					</div>
 
 					<!-- Напиток -->
-					<div class="col-md-6 product drink">
+					<div class="col-md-6 product drink" data-price="30">
 						<div class="card mb-4" data-id="07">
 							<img class="product-img" src="img/drink/voda.jpg" alt="">
 							<div class="card-body text-center">
@@ -293,7 +295,7 @@
 					</div>
 					<!-- // Напиток -->
 					<!-- ?Десерт -->
-					<div class="col-md-6 product dessert">
+					<div class="col-md-6 product dessert" data-price="99">
 						<div class="card mb-4" data-id="07">
 							<img class="product-img" src="img/sugar/banan.jpg" alt="">
 							<div class="card-body text-center">
@@ -326,7 +328,7 @@
 					<!-- ?/Десерт -->
 
 					<!-- ?Десерт -->
-					<div class="col-md-6 product dessert">
+					<div class="col-md-6 product dessert" data-price="99">
 						<div class="card mb-4" data-id="07">
 							<img class="product-img" src="img/sugar/granatzmedom.jpg" alt="">
 							<div class="card-body text-center">
@@ -359,7 +361,7 @@
 					<!-- ?/Десерт -->
 
 					<!-- ?Десерт -->
-					<div class="col-md-6 product dessert">
+					<div class="col-md-6 product dessert" data-price="99"	>
 						<div class="card mb-4" data-id="07">
 							<img class="product-img" src="img/sugar/marakya.jpg" alt="">
 							<div class="card-body text-center">
